@@ -58,6 +58,7 @@ following names for their contribution to the product.
 * Mormegil
 * Nathaniel Herman
 * Nathan Larson
+* Nikolaos S. Karastathis
 * Paul Copperman
 * RememberTheDot
 * ST47
