@@ -189,6 +189,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15125) Add Public Domain to default options when installing. Patch by Nathan Larson.
 * Set a special temporary directory for ImageMagick with $wgImageMagickTempDir
 * (bug 16113) Show/hide for redirects in Special:NewPages
+* (bug 15903) Upload link was added to Nostalgia skin
 
 === Bug fixes in 1.14 ===
 
